# claude-test

./: TIMING_GUIDE.md  benchmark.py  claude-logs.jsonl  claude_logs.md  main.py  parse_logs.py  plan.md  pyproject.toml  timing_example.py
src/hello_world_package/: __init__.py  pyhash.py  timer.py
tests/: __init__.py  test_sha256.py  test_sha256_internals.py  test_timer.py
